--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,3 +1,10 @@
+:root{
+    --cor-primaria:black ;
+    --cor-secundaria: red;
+    --cor-terciaria: white;
+    --cor-hover:#272727;
+}
+
 body {
     color:black;
     background-color: papayawhip;
@@ -81,3 +88,92 @@ ul {
     margin: 3em 0;
     padding-right: 4px;
   } 
+
+  .apresentacao{
+    padding:8% 15%;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+}
+
+.apresentacao__conteudo{
+    width: 50%; 
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.apresentacao__conteudo__titulo{
+    font-size:2.25rem ;
+    font-family: var(--fonte-secundaria);
+    
+}
+
+.titulo-destasque {
+    color: var(--cor-terciaria)
+}
+
+.apresentacao__conteudo__paragrafo{
+    font-size: 1.5rem;
+    font-weight: 100;
+    font-family:var(--fonte-secundaria);
+    
+}
+
+.apresentacao__links{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+    
+}
+
+.apresentacao__links__subtitulo{
+    font-family:var(--fonte-secundaria);
+    font-weight: 200;
+    font-size: 1.5rem;
+}
+
+.apresentacao__links__link{
+    /* background-color: white; */
+    display: flex;
+    justify-content: center;
+    border: 2px solid var(--cor-secundaria);
+    width: 50%;
+    text-align: center;
+    border-radius: 8px;
+    font-weight: 500;
+    font-size:  1.5rem; 
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: var(--cor-terciaria);
+    font-family:var(--fonte-primaria);
+
+}
+
+.apresentacao__links__link:hover{
+    background-color: var(--cor-hover);
+}
+
+.apresentacao__imagem{
+   margin:5%;
+   width:50%;
+
+}
+
+.rodape{
+    padding: 24px;
+    color: var(--cor-primaria);
+    background-color: var(--cor-secundaria);
+    text-align: center;
+    font-family: white;
+    font-weight: 400;
+}
+
+
+.apresentacao__conteudo__texto {
+    text-decoration: none;
+    color: var(--cor-primaria);
+}
+
