--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,37 +1,3 @@
-:root{
-    --cor-primaria:black ;
-    --cor-secundaria: red;
-    --cor-terciaria: white;
-    --cor-hover:#272727;
-}
-
-body {
-    color:black;
-    background-color: papayawhip;
-    font-family: Arial, Helvetica, sans-serif;
-} 
-
-ul {
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    padding: 16px;
-}
-
-a {
-    color: black;
-    text-decoration: none;
-}
-
-header img {
-    width: 1000px;
-    height: 500px;
-    border: 5px solid black;
-}
-
-.center {
-        text-align: center;
-        text-justify: inter-word;
 }
 
 footer img {
@@ -73,23 +39,23 @@ ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-  }
+}
 
-  ul li {
+ul li {
     display: block;
     margin-bottom: 10px;
-  }
+}
 
-  .lista1 {
+.lista1 {
     align-items: center;
     display: list-item;
     list-style-type: none;
     justify-content: center;
     margin: 3em 0;
     padding-right: 4px;
-  } 
+} 
 
-  .apresentacao{
+.apresentacao{
     padding:8% 15%;
     display:flex;
     justify-content:space-between;
@@ -171,9 +137,6 @@ ul {
     font-weight: 400;
 }
 
-
-.apresentacao__conteudo__texto {
-    text-decoration: none;
-    color: var(--cor-primaria);
-}
-
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 0px 20px;
