--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -140,3 +140,17 @@ ul li {
 @media screen and (max-width: 768px) {
     .container {
         padding: 0px 20px;
+
+/* Adicione este código ao final do arquivo CSS */
+
+@media (max-width: 767px) {
+    .foto-div {
+        width: 100%;
+        height: auto;
+    }
+
+    .foto-div img {
+        width: 100%; 
+        height: auto; 
+    }
+}
