--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,79 +1,25 @@
-:root{
-    --cor-primaria:black ;
-    --cor-secundaria: red;
-    --cor-terciaria: white;
-    --cor-hover:#272727;
 }
-
-*{
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    color:black;
-    background-color: papayawhip;
-    font-family: Arial, Helvetica, sans-serif;
-} 
-
-ul {
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    padding: 16px;
-}
-
-a {
-    color: black;
-    text-decoration: none;
-}
-
-header img {
-    width: 1000px;
-    height: 500px;
-    border: 5px solid black;
-}
-
-
 footer img {
     width: 40px;
     height: 40px;
 }
-
 footer {
     display: flex;
     justify-content: center;
 }
-
 footer a {
     margin: 20px;
     text-align: center;
 }
-
 footer p {
     margin-top: 20px;
 }
-
 .container {
-    padding:2% 0% 0% 15%;
+    padding: 0px 50px;
 }
-
-.cabecalho__menu{
-    display: flex;
-    gap:15px;
-}
-
-.cabecalho__menu__link{
-    font-family:var(--fonte-primaria); 
-    font-size: 1.5rem;
-    font-weight: 600;
-    color: var(--cor-terciaria);
-    text-decoration: none;}
-
 nav a:hover {
     color: green;
 }
-
 p {
     font-size: 20px;
     direction: ltr;
@@ -81,62 +27,49 @@ p {
     text-indent: 10px;
     text-align: justify;
 }
-
 ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-  }
-
-  ul li {
+}
+ul li {
     display: block;
     margin-bottom: 10px;
-  }
-
-  .lista1 {
+}
+.lista1 {
     align-items: center;
-    display: flex;
-    flex-direction: column;
+    display: list-item;
     list-style-type: none;
     justify-content: center;
-    margin: 3em 7em;
-    padding-right: 100px;
-  } 
-
-  .A{
-    padding-right: 5%;
-  }
-
-  .apresentacao{
-    padding:3% ;
-    display:block;
+    margin: 3em 0;
+    padding-right: 4px;
+} 
+.apresentacao{
+    padding:8% 15%;
+    display:flex;
     justify-content:space-between;
     align-items:center;
 }
-
 .apresentacao__conteudo{
+    width: 50%; 
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
-
 .apresentacao__conteudo__titulo{
     font-size:2.25rem ;
     font-family: var(--fonte-secundaria);
     
 }
-
 .titulo-destasque {
     color: var(--cor-terciaria)
 }
-
 .apresentacao__conteudo__paragrafo{
     font-size: 1.5rem;
     font-weight: 100;
     font-family:var(--fonte-secundaria);
     
 }
-
 .apresentacao__links{
     display: flex;
     flex-direction: column;
@@ -145,13 +78,11 @@ ul {
     gap: 32px;
     
 }
-
 .apresentacao__links__subtitulo{
     font-family:var(--fonte-secundaria);
     font-weight: 200;
     font-size: 1.5rem;
 }
-
 .apresentacao__links__link{
     /* background-color: white; */
     display: flex;
@@ -166,19 +97,14 @@ ul {
     text-decoration: none;
     color: var(--cor-terciaria);
     font-family:var(--fonte-primaria);
-
 }
-
 .apresentacao__links__link:hover{
     background-color: var(--cor-hover);
 }
-
 .apresentacao__imagem{
    margin:5%;
    width:50%;
-
 }
-
 .rodape{
     padding: 24px;
     color: var(--cor-primaria);
@@ -187,46 +113,6 @@ ul {
     font-family: white;
     font-weight: 400;
 }
-
-
-.apresentacao__conteudo__texto {
-    text-decoration: none;
-    color: var(--cor-primaria);
-}
-
-.texto{
-    padding-top: 2%;
-}
-
-@media only screen and (max-width:1024px){
-    .container{
-        padding: 10%;
-    }
-
-    .cabecalho__menu{
-        justify-content: center;
-        
-    }
-
-    .apresentacao{
-        flex-direction: column-reverse;
-        padding: 10%;
-    }
-
-    .apresentacao__conteudo{
-        width: auto;
-    }
-
-    .imagem{
-      width: 300px;
-      height: 400px;
-      align-items: center;
-    }
-
-    .lista1{
-        display:flex;
-        flex-direction: column-reverse;
-        
-    }
-
-}
+@media screen and (max-width: 768px) {
+    .container {
+        padding: 0px 20px;
