--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,50 +1,61 @@
+root{
+    --cor-primaria:black ;
+    --cor-secundaria: red;
+    --cor-terciaria: white;
+    --cor-hover:#272727;
 }
-footer img {
-    width: 40px;
-    height: 40px;
-}
-footer {
-    display: flex;
-    justify-content: center;
-}
-footer a {
-    margin: 20px;
-    text-align: center;
-}
-footer p {
-    margin-top: 20px;
-}
-.container {
-    padding: 0px 50px;
-}
-nav a:hover {
-    color: green;
-}
-p {
-    font-size: 20px;
-    direction: ltr;
-    word-spacing: normal;
-    text-indent: 10px;
-    text-align: justify;
-}
+
+body {
+    color:black;
+    background-color: papayawhip;
+    font-family: Arial, Helvetica, sans-serif;
+} 
+
 ul {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 16px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+header img {
+    width: 1000px;
+    height: 500px;
+    border: 5px solid black;
+}
+
+.center {
+        text-align: center;
+        text-justify: inter-word;
+}
+
+footer img {
+	@@ -73,23 +39,23 @@ ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
-}
-ul li {
+  }
+
+  ul li {
     display: block;
     margin-bottom: 10px;
-}
-.lista1 {
+  }
+
+  .lista1 {
     align-items: center;
     display: list-item;
     list-style-type: none;
     justify-content: center;
     margin: 3em 0;
     padding-right: 4px;
-} 
-.apresentacao{
+  } 
+
+  .apresentacao{
     padding:8% 15%;
     display:flex;
     justify-content:space-between;
@@ -64,38 +75,7 @@ ul li {
 .titulo-destasque {
     color: var(--cor-terciaria)
 }
-.apresentacao__conteudo__paragrafo{
-    font-size: 1.5rem;
-    font-weight: 100;
-    font-family:var(--fonte-secundaria);
-    
-}
-.apresentacao__links{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 32px;
-    
-}
-.apresentacao__links__subtitulo{
-    font-family:var(--fonte-secundaria);
-    font-weight: 200;
-    font-size: 1.5rem;
-}
-.apresentacao__links__link{
-    /* background-color: white; */
-    display: flex;
-    justify-content: center;
-    border: 2px solid var(--cor-secundaria);
-    width: 50%;
-    text-align: center;
-    border-radius: 8px;
-    font-weight: 500;
-    font-size:  1.5rem; 
-    padding: 21.5px 0;
-    text-decoration: none;
-    color: var(--cor-terciaria);
+	@@ -151,29 +117,26 @@
     font-family:var(--fonte-primaria);
 }
 .apresentacao__links__link:hover{
@@ -113,6 +93,9 @@ ul li {
     font-family: white;
     font-weight: 400;
 }
-@media screen and (max-width: 768px) {
-    .container {
-        padding: 0px 20px;
+
+
+.apresentacao__conteudo__texto {
+    text-decoration: none;
+    color: var(--cor-primaria);
+}
