--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,3 +1,9 @@
+body {
+    color:black;
+    background-color: papayawhip;
+    font-family: Arial, Helvetica, sans-serif;
+} 
+
 footer img {
     width: 40px;
     height: 40px;
