--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,40 +1,50 @@
 body {
-    color:black;
-    background-color: papayawhip;
-    font-family: Arial, Helvetica, sans-serif;
-} 
-.center {
-        text-align: center;
-        text-justify: inter-word;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
+
+.center {
+    text-align: center;
+    text-justify: inter-word;
+}
+
 footer img {
     width: 40px;
     height: 40px;
 }
+
 footer {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
+
 footer a {
     margin: 20px;
     text-align: center;
 }
+
 footer p {
     margin-top: 20px;
 }
+
 .container {
-    padding: 0px 50px;
+    padding: 0px 15px;
 }
+
 nav a:hover {
     color: green;
 }
+
 p {
-    font-size: 20px;
+    font-size: 16px;
     direction: ltr;
     word-spacing: normal;
     text-indent: 10px;
     text-align: justify;
 }
+
 ul {
     display: flex;
     justify-content: space-between;
@@ -46,6 +56,7 @@ ul li {
     display: block;
     margin-bottom: 10px;
 }
+
 .lista1 {
     align-items: center;
     display: list-item;
@@ -54,51 +65,60 @@ ul li {
     margin: 3em 0;
     padding-right: 4px;
 } 
+
 .apresentacao{
     padding:8% 15%;
     display:flex;
     justify-content:space-between;
     align-items:center;
+    flex-wrap: wrap;
 }
+
 .apresentacao__conteudo{
-    width: 50%; 
+    width: 100%; 
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
+
 .apresentacao__conteudo__titulo{
     font-size:2.25rem ;
     font-family: var(--fonte-secundaria);
     
 }
+
 .titulo-destasque {
     color: var(--cor-terciaria)
 }
+
 .apresentacao__conteudo__paragrafo{
     font-size: 1.5rem;
     font-weight: 100;
     font-family:var(--fonte-secundaria);
     
 }
+
 .apresentacao__links{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     gap: 32px;
-    
+    width: 100%;
 }
+
 .apresentacao__links__subtitulo{
     font-family:var(--fonte-secundaria);
     font-weight: 200;
     font-size: 1.5rem;
 }
+
 .apresentacao__links__link{
     /* background-color: white; */
     display: flex;
     justify-content: center;
     border: 2px solid var(--cor-secundaria);
-    width: 50%;
+    width: 100%;
     text-align: center;
     border-radius: 8px;
     font-weight: 500;
@@ -108,25 +128,18 @@ ul li {
     color: var(--cor-terciaria);
     font-family:var(--fonte-primaria);
 }
+
 .apresentacao__links__link:hover{
     background-color: var(--cor-hover);
 }
+
 .apresentacao__imagem{
    margin:5%;
-   width:50%;
+   width:100%;
 }
+
 .rodape{
     padding: 24px;
     color: var(--cor-primaria);
     background-color: var(--cor-secundaria);
-    text-align: center;
-    font-family: white;
-    font-weight: 400;
-}
-
-header img {
-    width: 1000px;
-    height: 500px;
-    border: 5px solid black;
-}
-
+    text-align:
