--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,12 +1,11 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-}
-
+     color:black;
+    background-color: papayawhip;
+    font-family: Arial, Helvetica, sans-serif;
+} 
 .center {
-    text-align: center;
-    text-justify: inter-word;
+        text-align: center;
+        text-justify: inter-word;
 }
 
 footer img {
