--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -1,4 +1,6 @@
 body {
+     margin: 0;
+    padding: 0;
      color:black;
     background-color: papayawhip;
     font-family: Arial, Helvetica, sans-serif;
