--- a/site pirulito/index.css
+++ b/site pirulito/index.css
@@ -142,5 +142,5 @@ ul li {
     padding: 24px;
     color: var(--cor-primaria);
     background-color: var(--cor-secundaria);
-    text-align:
+    text-align:center
 }
